k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-backend
  namespace: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-backend
  template:
    metadata:
      labels:
        app: task-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/tejalkunde/devops-task-manager-backend:latest
          ports:
            - containerPort: 5000
