k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-frontend
  namespace: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-frontend
  template:
    metadata:
      labels:
        app: task-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/tejalkunde/devops-task-manager-frontend:latest
          ports:
            - containerPort: 80
